namespace Feazeyu.RPGSystems.Character
{
    /// <summary>Identifies the kind of <see cref="Resource"/> on an entity.</summary>
    public enum ResourceTypes
    {
        /// <summary>No specific resource type.</summary>
        None,
        /// <summary>Health / hit points.</summary>
        Health,
        /// <summary>Mana / magic points.</summary>
        Mana,
        /// <summary>Stamina / energy.</summary>
        Stamina
    }
}
